[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cfg = "0.9.0"
cfg-if = "1.0.0"
dotenvy = "0.15.7"
enum-map = "2.0.3"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
surf = "2.3.2"
tokio = { version = "1.40.0", features = ["full"] }
unleash-api-client = { version = "0.11.0", features = ["async-std", "reqwest", "surf"] }
